# bitslice_masking_and_shuffling

./: README.md  gen_modes.py  it_analyses.py  main.py  plot_results.py  requirements.txt
data/: isw_shu_shares.npz  isw_shu_tuples.npz  lin_m_shares.npz  lin_m_tuples.npz  linear_shu_everything.npz  shuffling_mac12.npz  shuffling_mnew.npz
sampling/: Cargo.toml
sampling/src/: lib.rs  proba_estimator.rs
