[package]
name = "sampling"
version = "0.1.0"
authors = ["anonymous author(s)"]
edition = "2018"

[lib]
name = "sampling"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version="0.14.0", features = ["rayon"]}
ndarray-rand = "0.13.0"
ndarray-npy = "0.7.1"
rand = "0.8.3"
numpy = "=0.13.0"
rayon = "1.5.0"
crossterm = "0.19.0"
itertools = "0.10.0"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[profile.release]
debug = true

